@@ -1,21 +1,15 @@
 package com.example.SecureStorage.domain.service;
 
-import java.util.List;
-import java.util.stream.Collectors;
-
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
-
 import com.example.SecureStorage.domain.entity.StorageSection;
-// import com.example.SecureStorage.domain.entity.StorageSectionDocument;
-// import com.example.SecureStorage.domain.repository.StorageSectionElasticsearchRepository;
 import com.example.SecureStorage.domain.repository.StorageSectionRepository;
-// import com.example.SecureStorage.domain.service.StorageSectionServiceKit.StorageSectionDocumentMapper;
 import com.example.SecureStorage.domain.service.StorageSectionServiceKit.StorageSectionInputVo;
 import com.example.SecureStorage.domain.service.StorageSectionServiceKit.StorageSectionMapper;
 import com.example.SecureStorage.domain.service.StorageSectionServiceKit.StorageSectionResVo;
 import com.example.SecureStorage.domain.service.StorageSectionServiceKit.StorageSectionResVoMapper;
+import java.util.List;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 @Service
 public class StorageSectionServiceImpl implements StorageSectionService {
@@ -37,7 +31,7 @@ public class StorageSectionServiceImpl implements StorageSectionService {
         List<StorageSection> sections = jpaRepository.findAll();
         return sections.stream()
                 .map(StorageSectionResVoMapper::mapFrom)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
